risoluzione issues e visualizzazione segnalazioni tecnico dalla cli